syntax = "proto3";

package cliente;

message ClienteRequest {
  string nombre = 1;
  int32 edad = 2;
  string facultad = 3;
  int32 disciplina = 4;
}

message ClienteResponse {
  string mensaje = 1;
}

service ClienteService {
  rpc EnviarCliente (ClienteRequest) returns (ClienteResponse);
}
